--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,7 @@
             .intro-heading-2 {
                 font-size: 96px;
                 font-weight: 900;
+                line-height: 100px;
             }
             .intro-heading-3 {
                 font-size: 56px;
