--- a/src/components/layout/Footer/Footer.scss
+++ b/src/components/layout/Footer/Footer.scss
@@ -1,9 +1,10 @@
 .footer-container {
-    margin-top: 200px;
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    bottom: 0;
     .footer-title-container {
         .footer-title-text {
             font-weight: 900;
