--- a/src/components/layout/Footer/Footer.scss
+++ b/src/components/layout/Footer/Footer.scss
@@ -31,6 +31,12 @@
         align-items: center;
         gap: 15px;
         margin-top: 25px;
+        .emptyImage {
+            background-color: #3f3f55;
+            width: 24px;
+            height: 24px;
+            border-radius: 8px;
+        }
     }
 
     .copyright-container {
