Fix image alighment

--- a/src/components/layout/Footer/Footer.scss
+++ b/src/components/layout/Footer/Footer.scss
@@ -31,7 +31,7 @@
         align-items: center;
         gap: 15px;
         margin-top: 25px;
-        .emptyImage {
+        .icon-image {
             background-color: #3f3f55;
             width: 24px;
             height: 24px;
