Add space under footer

--- a/src/components/layout/Footer/Footer.scss
+++ b/src/components/layout/Footer/Footer.scss
@@ -6,6 +6,7 @@
     width: 100%;
     position: absolute;
     bottom: 0;
+    margin-bottom: 20px;
     .footer-title-container {
         .footer-title-text {
             font-weight: 900;
