--- a/src/App.scss
+++ b/src/App.scss
@@ -152,22 +152,23 @@
             position: relative;
             width: 386.31px;
             height: 410.32px;
-            border-width: 4px;
+            border-width: 2px;
             border-style: solid;
             border-radius: 40px;
-            border-top-color: rgba(231, 68, 246, 0.3);
-            border-right-color: rgba(24, 245, 245, 0.3);
-            border-bottom-color: rgba(231, 68, 246, 0.3);
-            border-left-color: rgba(24, 245, 245, 0.3);
+            border-top-color: rgba(231, 68, 246, 0.5);
+            border-right-color: rgba(24, 245, 245, 0.4);
+            border-bottom-color: rgba(231, 68, 246, 0.4);
+            border-left-color: rgba(24, 245, 245, 0.4);
             backdrop-filter: blur(40px);
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: space-evenly;
+            justify-content: center;
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
             .value {
                 font-weight: 700;
                 font-size: 64px;
+                line-height: 80px;
                 color: #e744f6;
             }
             .pay {
